--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
-
+body {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23cc0000' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23aa0000' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23d61400' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23a30021' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23e02a00' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%239c003f' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23eb4200' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%2396005a' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23f55b00' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%238f0072' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23ff7700' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23880088' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
